--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body, html {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   color: #fff;
+  background-color: black;
 }
 
 body {
@@ -66,6 +67,10 @@ header > h1 {
   border: 1px solid #fffa;
   backdrop-filter: blur(10px) saturate(160%) contrast(180%);
   -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+}
+
+footer > a {
+  color: white;
 }
 
 ul {
