--- a/index.css
+++ b/index.css
@@ -48,13 +48,20 @@ header {
   align-items: center;
 }
 
-header > img {
+header > .me {
   width: 6em;
   height: 6em;
   border-radius: 100%;
   border: 1px solid #fff;
   box-shadow: rgb(28 32 93 / 24%) 0px 2px 8px 0px;
+  background-size: 6em 6em;
+  background-image: url("./img/eightbit-blake.png");
 }
+
+header > .me:hover {
+  background-image: url("./img/blake.png");
+}
+
 
 header > h1 {
   display: inline-block;
@@ -65,8 +72,16 @@ header > h1 {
   color: #fff;
   padding: 0.3em 0.6em;
   border: 1px solid #fffa;
-  backdrop-filter: blur(10px) saturate(160%) contrast(180%);
   -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+  backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+}
+footer {
+  margin-top: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.5em;
 }
 
 footer > a {
