--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body, html {
 }
 
 body {
-  background: url(./images/bg01.jpg) no-repeat center center fixed;
-  background-size: cover;
+  background: url(./img/bg.jpg) no-repeat center center fixed;
+  background-size: 100% 100%;
 }
 
 #vanta {
@@ -41,7 +41,7 @@ main.animated {
 }
 
 header {
-  margin-top: 3em;
+  margin-top: 0em;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -49,6 +49,7 @@ header {
 }
 
 header > .me {
+  margin-top:  3em;
   width: 6em;
   height: 6em;
   border-radius: 100%;
