--- a/index.css
+++ b/index.css
@@ -4,11 +4,8 @@ body, html {
   font-family: 'Open Sans', sans-serif;
   color: #fff;
   background-color: black;
-}
-
-body {
   background: url(./img/bg.jpg) no-repeat center center fixed;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 #vanta {
@@ -18,16 +15,6 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-}
-
-video {
-  z-index: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 main {
