--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body, html {
   font-family: 'Open Sans', sans-serif;
   color: #fff;
   background-color: black;
-  background: url(./img/bg.jpg) no-repeat center center fixed;
+  background: url("./img/background.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
